# NanoAgent

./: .gitignore  .pre-commit-config.yaml  BUGLIST.md  CLAUDE.md  ChatDemo.py  README.md  ROADMAP.md  cat.sh  coverage.json  output.txt  pyproject.toml
.claude/: settings.json
config/: config.online.example.yaml  config.yaml
docs/: agent-control-audit.md  api.md  architecture.md  constraints.md  plugins.md  skill-development.md  testing.md  token-feature-tree.md  token-optimization-methodology.md  tutorial.md  update-checklist.md
docs/examples/: config.ollama.yaml  config.yaml
examples/plugins/: tool_weather.py
examples/skills/: coding.yaml  translation.py  web_search.yaml
nano_agent/: __init__.py  __main__.py
nano_agent/agent/: __init__.py  base.py  budget.py  cache.py  circuit_breaker.py  compressor.py  confidence.py  confirmation.py  consecutive_failure_detector.py  context.py  duplicate.py  estimation_audit.py  events.py  feedback_loop.py  filter_utils.py  git_manager.py  harmful_filter.py  intent_detector.py  orchestrator.py  output_guard.py  output_simplifier.py  prejudgment.py  prompt_builder.py  prompt_modules.py  prompts.py  prompts.xlsx  react.py  result_summarizer.py  result_validator.py  router.py  sanitizer.py  semantic_compressor.py  snapshot.py  stall_detector.py  subsystems.py  token_budget.py  token_utils.py  tool_merger.py  tool_offload.py  types.py  (+1 more)
nano_agent/cli/: __init__.py  config_display.py  console.py  constants.py  main.py  plan_mode.py  scanner.py
nano_agent/config/: __init__.py  loader.py  model_contexts.yaml  schema.py
nano_agent/core/: __init__.py  builder.py  registry.py  types.py
nano_agent/llm/: __init__.py  anthropic.py  base.py  embedding.py  messages.py  normalizer.py  ollama.py  openai_compatible.py  rate_limiter.py  retry.py
nano_agent/memory/: __init__.py  base.py  gc.py  (+7 more)
scripts/: check_config_chain.sh  check_doc_updates.sh  check_interface_implementation.sh  check_show_commands.sh  check_test_cases.sh  check_version_consistency.sh  test_token_consumption.py  test_token_consumption.sh
tests/: __init__.py  conftest.py  factories.py  run_tests.py  test_agent.py  test_aggressive_output.py  test_architecture.py  test_async_streaming.py  test_budget_wrapup.py  test_cache.py  test_calibration_loop.py  test_cases.xlsx  test_circuit_breaker.py  test_cli_main.py  test_cli_scanner.py  test_complexity_budget.py  test_compressor.py  test_config.py  test_confirmation.py  test_consecutive_failure_detector.py  test_context.py  test_context_length.py  test_core_builder.py  test_duplicate.py  test_e2e.py  test_e2e_context_length.py  test_embedding.py  test_estimation_audit.py  test_feedback_loop.py  test_git_manager.py  test_harmful_filter.py  test_hybrid_memory.py  test_intent_detector.py  test_llm_retry.py  test_memory.py  test_memory_gc.py  test_memory_interface.py  test_memory_migration.py  test_memory_tools.py  test_messages.py  (+34 more)
(+53 files in other folders)
