[project]
name = "nano-agent"
version = "0.1.0"
description = "A lightweight AI Agent framework for learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NanoAgent Team"}
]
keywords = ["ai", "agent", "llm", "ollama"]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
nano-agent = "nano_agent.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_system"

[tool.setuptools.packages.find]
where = ["."]
include = ["nano_agent*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
