[project]
name = "nano-agent"
version = "0.7.19"
description = "A lightweight AI Agent framework implementing ReAct pattern"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NanoAgent Team", email = "nano-agent@example.com"}
]
keywords = ["ai", "agent", "llm", "ollama", "openai", "react", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
embedding = [
    "sentence-transformers>=2.0.0",
]

[project.scripts]
nano-agent = "nano_agent.cli.main:main"

[project.urls]
Homepage = "https://github.com/Tobytywang/NanoAgent"
Documentation = "https://github.com/Tobytywang/NanoAgent#readme"
Repository = "https://github.com/Tobytywang/NanoAgent"
Issues = "https://github.com/Tobytywang/NanoAgent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nano_agent*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nano_agent --cov-fail-under=54 --cov-report=term-missing"
markers = [
    "unit: Unit tests - fast, isolated, no external dependencies",
    "integration: Integration tests - require real dependencies",
    "e2e: End-to-end tests - complete user workflows",
    "slow: Slow running tests",
]
